feat: give agents internet access

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,5 @@
 OPENAI_API_KEY=your_openai_api_key_here
 OPENAI_MODEL_NAME=gpt-4o-mini
+SERPER_API_KEY=your_serper_api_key_here
+INTERNET_TOOL_TIMEOUT_SECONDS=15
+INTERNET_TOOL_USER_AGENT=Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/126.0.0.0 Safari/537.36
